Try new layout of not submitted people
Hopefully clearer...

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -57,7 +57,7 @@
                     <div class="col-lg-1 col-sm-2 col-xs-3">
                     {% endif %}
                          {% import 'embed_cv.html' as embed_cv %}
-                        {{ embed_cv.embed_cv(cv, full_page_link=True) }} 
+                        {{ embed_cv.embed_cv(cv) }} 
                     </div>
                 {% endfor %}
             </div>
