--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} {{ candidate.name }}'s CV, {{ candidate.constituency_name }}, MP Candidate, {{ candidate.party}} {% endblock %}
+{% block title %} {{ candidate.name }}'s CV, {{ candidate.constituency_name }}, MP candidate, {{ candidate.party}} {% endblock %}
 
 {% block allbody %}
 <body>
@@ -42,7 +42,7 @@
 
           <div class="navbar-brand">
              <span class="visible-lg-block visible-md-block hidden-sm hidden-xs">
-                {{ candidate.name }}'s CV, {{ candidate.constituency_name }}, MP Candidate
+                {{ candidate.name }}'s CV, {{ candidate.constituency_name }}, MP candidate
              </span>
              <span class="hidden-lg hidden-md visible-sm-block hidden-xs">
                 {{ candidate.name }}'s CV, {{ candidate.constituency_name }}
@@ -69,7 +69,7 @@
                 {{ candidate.party }}
              </span>
              <span class="hidden-lg hidden-md hidden-sm visible-xs-block">
-                {{ candidate.constituency_name }}, MP Candidate, {{ candidate.party }}
+                {{ candidate.constituency_name }}, MP candidate, {{ candidate.party }}
              </span>
           </p>
 
