--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -4,7 +4,7 @@
 
     <div id="tweet_candidates">
 
-        <h1>Tweet to {{ constituency.name }} candidates</h1>
+        <h1>Tweet {{ constituency.name }} candidates without CVs</h1>
 
         <p class="lead">One at a time. You can customise each message, if you like.</p>
 
