--- a/static/style.css
+++ b/static/style.css
@@ -119,6 +119,9 @@ footer ul.pull-right li:last-child {
     color: #bbb;
 }
 
+.candidates {
+}
+
 .candidates .candidate {
 }
 
@@ -360,4 +363,126 @@ body, html {
 
 #tweet_candidates .party {
     font-size: 22.5px;
+}
+
+/*  Bootstrap Clearfix */
+
+/* http://www.bluthemes.com/blog/3/clearing-bootstrap-3-columns */
+
+/* Column clear fix */
+.col-lg-1:nth-child(12n+1),
+.col-lg-2:nth-child(6n+1),
+.col-lg-3:nth-child(4n+1),
+.col-lg-4:nth-child(3n+1),
+.col-lg-6:nth-child(2n+1),
+.col-md-1:nth-child(12n+1),
+.col-md-2:nth-child(6n+1),
+.col-md-3:nth-child(4n+1),
+.col-md-4:nth-child(3n+1),
+.col-md-6:nth-child(2n+1),
+.col-sm-1:nth-child(12n+1),
+.col-sm-2:nth-child(6n+1),
+.col-sm-3:nth-child(4n+1),
+.col-sm-4:nth-child(3n+1),
+.col-sm-6:nth-child(2n+1){
+  clear: none;
+}
+.col-xs-1:nth-child(12n+1),
+.col-xs-2:nth-child(6n+1),
+.col-xs-3:nth-child(4n+1),
+.col-xs-4:nth-child(3n+1),
+.col-xs-6:nth-child(2n+1){
+  clear: left;
+}
+
+/*  Tablet  */
+@media (min-width:767px){
+
+  /* Column clear fix */
+  .col-lg-1:nth-child(12n+1),
+  .col-lg-2:nth-child(6n+1),
+  .col-lg-3:nth-child(4n+1),
+  .col-lg-4:nth-child(3n+1),
+  .col-lg-6:nth-child(2n+1),
+  .col-md-1:nth-child(12n+1),
+  .col-md-2:nth-child(6n+1),
+  .col-md-3:nth-child(4n+1),
+  .col-md-4:nth-child(3n+1),
+  .col-md-6:nth-child(2n+1),
+  .col-xs-1:nth-child(12n+1),
+  .col-xs-2:nth-child(6n+1),
+  .col-xs-3:nth-child(4n+1),
+  .col-xs-4:nth-child(3n+1),
+  .col-xs-6:nth-child(2n+1){
+    clear: none;
+  }
+  .col-sm-1:nth-child(12n+1),
+  .col-sm-2:nth-child(6n+1),
+  .col-sm-3:nth-child(4n+1),
+  .col-sm-4:nth-child(3n+1),
+  .col-sm-6:nth-child(2n+1){
+    clear: left;
+  }
+}
+
+
+/*  Medium Desktop  */
+@media (min-width:992px){
+
+  /* Column clear fix */
+  .col-lg-1:nth-child(12n+1),
+  .col-lg-2:nth-child(6n+1),
+  .col-lg-3:nth-child(4n+1),
+  .col-lg-4:nth-child(3n+1),
+  .col-lg-6:nth-child(2n+1),
+  .col-sm-1:nth-child(12n+1),
+  .col-sm-2:nth-child(6n+1),
+  .col-sm-3:nth-child(4n+1),
+  .col-sm-4:nth-child(3n+1),
+  .col-sm-6:nth-child(2n+1),
+  .col-xs-1:nth-child(12n+1),
+  .col-xs-2:nth-child(6n+1),
+  .col-xs-3:nth-child(4n+1),
+  .col-xs-4:nth-child(3n+1),
+  .col-xs-6:nth-child(2n+1){
+    clear: none;
+  }
+  .col-md-1:nth-child(12n+1),
+  .col-md-2:nth-child(6n+1),
+  .col-md-3:nth-child(4n+1),
+  .col-md-4:nth-child(3n+1),
+  .col-md-6:nth-child(2n+1){
+    clear: left;
+  }
+}
+
+
+/*  Large Desktop  */
+@media (min-width:1200px){
+
+  /* Column clear fix */
+  .col-md-1:nth-child(12n+1),
+  .col-md-2:nth-child(6n+1),
+  .col-md-3:nth-child(4n+1),
+  .col-md-4:nth-child(3n+1),
+  .col-md-6:nth-child(2n+1),
+  .col-sm-1:nth-child(12n+1),
+  .col-sm-2:nth-child(6n+1),
+  .col-sm-3:nth-child(4n+1),
+  .col-sm-4:nth-child(3n+1),
+  .col-sm-6:nth-child(2n+1),
+  .col-xs-1:nth-child(12n+1),
+  .col-xs-2:nth-child(6n+1),
+  .col-xs-3:nth-child(4n+1),
+  .col-xs-4:nth-child(3n+1),
+  .col-xs-6:nth-child(2n+1){
+    clear: none;
+  }
+  .col-lg-1:nth-child(12n+1),
+  .col-lg-2:nth-child(6n+1),
+  .col-lg-3:nth-child(4n+1),
+  .col-lg-4:nth-child(3n+1),
+  .col-lg-6:nth-child(2n+1){
+    clear: left;
+  }
 }
