--- a/templates/embed_cv.html
+++ b/templates/embed_cv.html
@@ -20,3 +20,14 @@
         </a>
     </div>
 {% endmacro %}
+
+{% macro full_cv_block(candidate) %}
+     <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 candidate">
+         <span class="name">{{ candidate.name }}</span> <br> <span class="party">{{ candidate.party}}</span>
+         {% if candidate.cv %}
+             {{ embed_cv(candidate.cv) }}
+         {% else %}
+             {{ embed_non_cv("/static/not-submitted-their-cv.png", "/upload_cv/" ~ candidate.id) }}
+         {% endif %}
+     </div>            
+{% endmacro %}
