--- a/templates/embed_cv.html
+++ b/templates/embed_cv.html
@@ -21,8 +21,14 @@
     </div>
 {% endmacro %}
 
-{% macro full_cv_block(candidate) %}
-     <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 candidate">
+{% macro full_cv_block(candidate, size) %}
+      {% if size == 'large' %}
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 candidate">
+      {% elif size == 'medium' %}
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 candidate">
+      {% elif size == 'small' %}
+      <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3 candidate">
+      {% endif %}
          <span class="name">{{ candidate.name }}</span> <br> <span class="party">{{ candidate.party}}</span>
          {% if candidate.cv %}
              {{ embed_cv(candidate.cv) }}
