Offer email option, might get more CVs

--- a/templates/check_email.html
+++ b/templates/check_email.html
@@ -18,5 +18,10 @@
         it's your CV.
         </p>
 
+        <h1>Not working?</h1>
+
+        <p>Instead, <a href="mailto:cv@democracyclub.org.uk">email us</a>
+        your CV as an attachment.</p>
+
 {% endblock %}
 
