--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
         <div class="navbar-header">
           <a href="/" class="navbar-brand">
               <img src="/static/dc_logo.png">
-              Democracy Club CVs
+              <span class="brand-name">Democracy Club CVs</span>
           </a>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
