Fix squished subscribe form on narrow browsers

--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -1,5 +1,5 @@
 {% macro subscribe(show_dismiss, from_email, postcode) %}
-<div class="get-updates row"><div class="col-xs-6">
+<div class="get-updates row"><div class="col-xs-12 col-sm-6">
 <div class="panel panel-primary">
     <div class="panel-heading panel-title">
         Get updates for {{ postcode }}
