--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -33,6 +33,7 @@
                 </div>
 
                 <div class="col-md-4">
+                    <a href="/tweet_candidates/{{ constituency.id }}" class="btn btn-md btn-info"> Tweet candidates instead </a>
                 </div>
             </div>
 
