Allow skip email if emailed already

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
             <div class="form-inline">
               <input id="postcode" name="postcode" placeholder="Postcode" class="input-lg form-control" autofocus>
               <button type="submit" class="btn btn-lg btn-success" id="submit-postcode" data-loading-text="Go">Go</button>
+              <input type="hidden" name="from-front-page" value="1">
             </div>
         </form>
 
