--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -55,7 +55,12 @@
                         <div class="col-sm-3">
                         </div>
                         <div class="col-sm-9">
-                            <button type="submit" class="btn btn-success btn-lg" id="send-emails" data-loading-text="Sending...">Send emails</button>
+                            <button type="submit" class="btn btn-success btn-lg" id="send-emails" data-loading-text="Sending...">
+                                Send emails
+                                {% if tempt_text %}
+                                (and see the CVs!) 
+                                {% endif %}
+                            </button>
                         </div>
                     </div>
                 </div>
