--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} Curriculum Vitae of future Members of Parliament {% endblock %}
+{% block title %} CVs of General Election Candidates {% endblock %}
 
 {% block wide %}
 
