Don't force email

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             Enter your postcode.
         </p>
 
-        <form action="/email_candidates" method="GET" class="button-disabling-form">
+        <form action="/candidates" method="GET" class="button-disabling-form">
             <div class="form-inline">
               <input id="postcode" name="postcode" placeholder="Postcode" class="input-lg form-control" autofocus>
               <button type="submit" class="btn btn-lg btn-success" id="submit-postcode" data-loading-text="Go">Go</button>
