Fix front page subheading now not forcing

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
         <h1>Ask your MP candidates for their CV!</h1>
 
-        <p class="lead">(Then see the ones we've got so far)</p>
+        <p class="lead">See the ones we've got so far.</p>
         
         <p class="lead">
             Enter your postcode.
